# weather-cli

./: Cargo.toml  README.md
src/: argparser.rs  cli.rs  configs.rs  geocoder.rs  input.rs  lib.rs  main.rs  provider_builder.rs  providers.rs
src/providers/: error.rs  models.rs  open_weather.rs  provider_trait.rs  providers_report.rs  weather_api.rs
tests/: config_tests.rs
