[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
clap = { version = "4.5.31", features = ["derive"] }
chrono = "0.4.40"
urlencoding = "2.1.3"